(issue #36) Note cards on a source contain tags that are visible
Tags will show under the note card with a overflow cutoff because to match the wireframe and support when clicked the note will display all cotent on a dialog

-Corey Williams

--- a/code/web-capstone/src/app/components/note/note.component.css
+++ b/code/web-capstone/src/app/components/note/note.component.css
@@ -8,7 +8,7 @@
 	flex-direction: column;
   }
   .note-header {
-	display: flex;
+display: flex;
 	justify-content: space-between;
 	align-items: center;
   }
@@ -33,3 +33,19 @@
 	font-family: 'Arial', sans-serif;
 	
   }
+  .note-footer {
+	display: flex;
+	width: 50%;
+	white-space: nowrap;
+	overflow: hidden;
+  }
+  .note-tags {
+	display: flex;
+  }
+  .note-tags label {
+	align-self: center;
+  }
+  .tags {
+	width: 100%;
+  }
+  
